--- a/view/index.handlebars
+++ b/view/index.handlebars
@@ -13,9 +13,16 @@
 			<div class="col-xs-4" class="images" style="text-align:center">
 				<img src="{{image}}" class="img-responsive" class="img hashtag-img"><br>
 				<h4>#{{hashtag}}</h4>
-				</div>
-				{{/each}}
-				</div>
+
+				<form id="deleteHashTag" role="form" method="post" action="/delete">
+					<input type="hidden" name="id" value="{{_id}}">
+					<button type="submit" class="btn btn-danger">Delete</button>
+				</form>
+
+
+			</div>
+		{{/each}}
+	</div>
 
 </body>
 </html>
